# nguyenpanda-cpp-pacakge

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  nguyenpandaConfig.cmake.in
include/: nguyenpanda.h
include/swan/: color.h  swan.h
src/: nguyenpanda.cpp
src/swan/: color.cpp
